--- a/MariaBOUALEM_CountWord.ipynb
+++ b/MariaBOUALEM_CountWord.ipynb
@@ -19,7 +19,7 @@
       "source": [
         "#  input text\n",
         "input_text = \"\"\"\n",
-        "Etre ou ne pas etre la est la question\n",
+        "Etre ou ne pas etre là est la question\n",
         "\"\"\"\n",
         "\n",
         "#En utilisant un .txt\n",
