--- a/MariaBOUALEM_CountWord.ipynb
+++ b/MariaBOUALEM_CountWord.ipynb
@@ -19,8 +19,8 @@
       "source": [
         "#  input text\n",
         "input_text = \"\"\"\n",
-        "Etre ou ne pas etre là est la question\n",
-        "\"\"\"\n",
+        "Etre ou ne pas etre la est la question\n",
+        "\"\"\"\n", 
         "\n",
         "#En utilisant un .txt\n",
         "with open('Input.txt', 'r') as file:\n",
