--- a/MariaBOUALEM_CountWord.ipynb
+++ b/MariaBOUALEM_CountWord.ipynb
@@ -47,10 +47,10 @@
         "# Mapper\n",
         "def mapper(text):\n",
         "    word_counts = []\n",
-        "    #diviser en mots  et convertir en miniscule\n",
+        "    #diviser en mots \n",
         "    words = text.split()\n",
         "    for word in words:\n",
-        "        # Emit key-value pair (word, 1)\n",
+        "        # Emit key-value pair (word, 1) après les avoir convertir en miniscule\n",
         "        word_counts.append((word.lower(), 1))\n",
         "    return word_counts\n",
         "\n",
