--- a/MariaBOUALEM_CountWord.ipynb
+++ b/MariaBOUALEM_CountWord.ipynb
@@ -151,7 +151,7 @@
         "mapped_data = mapper(input_text)\n",
         "\n",
         "# Step 2: Shuffle\n",
-        "# On a écraser les valeurs en faisant count + avec mon code donc pas besoin !\n",
+        "# Optionnel\n",
         "\n",
         "# Step 3: Reduce\n",
         "reduced_data = reducer(mapped_data)\n",
