--- a/MariaBOUALEM_CountWord.ipynb
+++ b/MariaBOUALEM_CountWord.ipynb
@@ -50,7 +50,7 @@
         "    #diviser en mots \n",
         "    words = text.split()\n",
         "    for word in words:\n",
-        "        # Emit key-value pair (word, 1) après les avoir convertir en miniscule\n",
+        "        # Emit key-value pair (word, 1) après les avoir convertir en minuscule\n",
         "        word_counts.append((word.lower(), 1))\n",
         "    return word_counts\n",
         "\n",
